# boliganalyse-v2

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  HANDOVER.md  README.md  index.html  package-lock.json  package.json  tailwind.config.ts
api/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
api/src/: config.py  main.py
api/src/documents/: inbound.py  mindworking.py  pipeline.py  storage.py
api/src/documents/extractors/: danbolig.py  home.py
api/src/providers/: base.py  boligsiden.py  danbolig.py  edc.py  fallback.py  firecrawl.py  home.py  json_ld.py  registry.py
api/src/repositories/: document.py  inbound_email.py  listing.py
api/src/routes/: dependencies.py  documents.py  feedback.py  listings.py  schemas.py  webhooks.py
api/src/services/: ai_analyzer.py  base_tool.py  listing_processor.py  prompt.py  tool_registry.py
api/src/types/: models.py  status.py
api/src/utils/: html.py  url.py  validation.py
api/tests/: conftest.py  test_documents_extractor_danbolig.py  test_documents_extractor_home.py  test_documents_inbound.py  test_documents_mindworking.py  test_documents_mindworking_live.py  test_documents_pipeline.py  test_documents_repository.py  test_documents_storage.py  test_documents_submitter_home.py  test_listing_processor_complete_with_documents.py  test_listing_processor_documents.py  test_listing_processor_home_lead.py  test_migration_documents.py  test_postfix_smoke.py  test_routes_documents.py  test_routes_webhooks.py
api/tests/fixtures/: danbolig_listing.html  home_listing_nuxt.html  home_salesmaterial.eml
(+134 files in other folders)
